[package]
name = "opaque-ke-cs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "opaque_ke_cs"

[dependencies]
opaque-ke = "3.0.0"
uniffi = { version = "0.25.0", features = ["build", "bindgen"] }

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build", "bindgen"] }
